# assembler

./: .gitignore  CMakeLists.txt  a.am  a.as  assembler  input.am  input.as  macros.h  makefile  preprocessor.h
include/: ast.h  frontend.h  macros.h  middleend.h  preprocessor.h  second_pass.h
src/: first_pass.c  frontend.c  helper_frontend_functions.c  helper_preprocessor_functions.c  macros.c  main.c  middleend_utils.c  preprocessor.c  second_pass.c  second_pass_utils.c  test_frontend  test_frontend.c  test_middleend.c
